--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+aside {
+  background: #7bff0091;
+  box-sizing: border-box;
+  padding: 5px 10px;
+  border-radius: 10px;
+  font-weight: 600;
+  border: 1px solid #000000;
+}
+
+strong {
+  box-sizing: border-box;
+  padding: 2px 5px;
+  color: #000000 !important;
+  font-weight: 900;
+}
+
+li > p {
+  color: #000000 !important;
+  font-weight: 600 !important;
+}
+
+thead tr th {
+  background: #cccccc;
+  text-align: center;
+  line-height: auto;
+  border: 1px solid #000000;
+}
+
+tbody tr td:first-child {
+  text-align: center;
+}
+
+tbody tr td {
+  border: 1px solid #000000;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -28,6 +64,7 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
+    --brand-color: #5c67f2;
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
@@ -59,6 +96,8 @@
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
+
+    --brand-color: #9fa4ff;
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
