--- a/app/globals.css
+++ b/app/globals.css
@@ -107,3 +107,36 @@ tbody tr td {
     @apply bg-background text-foreground;
   }
 }
+
+/*  아이콘 */
+[class^="hex-icon"] {
+  width: 42px;
+  height: 50px;
+  display: inline-block;
+  transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+  -webkit-transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+[class^="hex-icon"]:hover {
+  transform: scale3d(1.2, 1.2, 1);
+  -webkit-transform: scale3d(1.2, 1.2, 1);
+  transition: all 0.35s cubic-bezier(0, 1.27, 0.46, 1.65);
+  -webkit-transition: all 0.35s cubic-bezier(0, 1.27, 0.46, 1.65);
+}
+[class^="hex-icon"] svg {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.hex-icon-sun path:first-of-type {
+  fill: #fff;
+}
+.hex-icon-sun circle {
+  stroke: #757579;
+  stroke-width: 2px;
+  fill: none;
+}
+.hex-icon-sun circle:last-of-type {
+  stroke-width: 2px;
+  stroke-dasharray: 2, 7.4;
+}
