--- a/app/globals.css
+++ b/app/globals.css
@@ -64,7 +64,7 @@ code::before {
     --popover-foreground: 222.2 84% 4.9%;
 
     --primary: 222.2% 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary-foreground: #ffffff;
 
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
